--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "customize-cra": "^0.9.1",
     "formik": "^2.1.1",
     "history": "^4.10.1",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
