--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "customize-cra": "^0.9.1",
     "formik": "^2.1.1",
     "history": "^4.10.1",
+    "i18next": "^19.0.3",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.2.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "yup": "^0.28.0"
