--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^4.4.8",
     "react-i18next": "^11.2.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
