--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-i18next": "^11.2.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "reset-css": "^5.0.1",
     "yup": "^0.28.0"
   },
   "scripts": {
