--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "node-sass": "^4.13.0",
+    "polished": "^3.4.2",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
@@ -23,6 +24,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "reset-css": "^5.0.1",
+    "styled-breakpoints": "^7.2.0",
+    "styled-components": "^5.0.0",
     "yup": "^0.28.0"
   },
   "scripts": {
