--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.6",
+    "axios": "^0.19.1",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "formik": "^2.1.1",
@@ -16,6 +17,7 @@
     "less-loader": "^5.0.0",
     "node-sass": "^4.13.0",
     "polished": "^3.4.2",
+    "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
