--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^11.2.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "reqwest": "^2.0.5",
     "reset-css": "^5.0.1",
     "styled-breakpoints": "^7.2.0",
     "styled-components": "^5.0.0",
