--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "jsonwebtoken": "^8.5.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "polished": "^3.4.2",
+    "qrcode.react": "^1.0.0",
     "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
