--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^4.4.8",
     "react-i18next": "^11.2.7",
     "react-measure": "^2.3.0",
+    "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "reset-css": "^5.0.1",
