--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "axios": "^0.19.1",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "date-fns": "^2.9.0",
     "formik": "^2.1.1",
     "history": "^4.10.1",
     "i18next": "^19.0.3",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "lodash.debounce": "^4.0.8",
-    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "polished": "^3.4.2",
     "qrcode.react": "^1.0.0",
