--- a/gcloud/production.yaml
+++ b/gcloud/production.yaml
@@ -8,17 +8,21 @@ handlers:
   - url: /static
     static_dir: dist/static
     expiration: '31536000s'
+    secure: always
 
   - url: /(.*\.(json|ico|js|txt))$
     static_files: dist/\1
     upload: dist/.*\.(json|ico|js|txt)$
+    secure: always
 
   - url: /
     static_files: dist/index.html
     upload: dist/index.html
     expiration: '0s'
+    secure: always
 
   - url: .*
     static_files: dist/200.html
     upload: dist/200.html
     expiration: '0s'
+    secure: always
