--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
+    "react-google-recaptcha": "^2.0.1",
     "react-hook-form": "^4.4.8",
     "react-i18next": "^11.2.7",
     "react-measure": "^2.3.0",
